gl31-master/src/test/deca/syntax/valid/sansobjet/valid_ident.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int aaaa;
    aaaa = 8;
}
