gl31-master/src/test/deca/syntax/invalid/sansobjet/brackets_missing.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 9 : Erreur, '{' manquant
//
// Historique:
//    cree le 12/01/2021
int a = 8;
println(a);
}
